# svk-packager

./: README.md  pyproject.toml
svk_packager/: cli.py
tests/: test_svk_packager.py
